kubernetes/apps/sauvage-bot/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sauvage-bot
  labels:
    kubernetes.io/metadata.name: sauvage-bot
    app.kubernetes.io/part-of: sauvage-moderation
